...
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Add to Cart">
                                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
                                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </buttonConfiguration>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="btnAddToCart"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="btnAddTapped:" destination="06g-Tu-wx5" eventType="touchUpInside" id="zPQ-9n-mIB"/>
                                                </connections>
                                            </button>
                                        </subviews>
...
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Submit">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="btnSubmit"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="btnSubmitTapped:" destination="CtA-vf-8Ls" eventType="touchUpInside" id="NGS-CP-wME"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="umV-VK-0Hj">
...
                            <constraint firstItem="1P4-nR-GHM" firstAttribute="top" secondItem="cNG-n7-78K" secondAttribute="top" id="iJL-Gl-pXa"/>
                            <constraint firstItem="umV-VK-0Hj" firstAttribute="top" secondItem="1P4-nR-GHM" secondAttribute="bottom" constant="8" id="ito-Rd-dbe"/>
                            <constraint firstItem="umV-VK-0Hj" firstAttribute="leading" secondItem="GiT-vS-BrL" secondAttribute="trailing" constant="8" id="xQb-aq-uQ5"/>
                            <constraint firstItem="cNG-n7-78K" firstAttribute="trailing" secondItem="1P4-nR-GHM" secondAttribute="trailing" id="zSn-b3-X3w"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Your Cart" id="omo-1G-mVD">
                        <barButtonItem key="rightBarButtonItem" title="Edit" id="dGa-77-VUu">
                            <connections>
                                <action selector="btnEditTapped:" destination="CtA-vf-8Ls" id="kzY-95-vwT"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
